# twitter-scylladb-rust

./: Cargo.toml  current_schema.json  simple-stress.sh
src/: lib.rs  main.rs
src/config/: app.rs  config.rs  mod.rs
src/dtos/: mod.rs  user_dto.rs
src/http/: mod.rs
src/http/controllers/: find_tweet.rs  get_user_profile.rs  mod.rs  post_tweet.rs
src/models/: mod.rs  timeline.rs  tweet.rs  user.rs  user_followers.rs  user_metrics.rs
src/repositories/: mod.rs  timeline_repository.rs  tweet_repository.rs  user_repository.rs
src/services/: metrics.rs
