[package]
name = "twitter-clone-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.5.1"
charybdis = "0.4.4"
chrono = { version = "0.4.35", features = ["serde"] }
dotenvy = "0.15.7"
scylla = "0.12.0"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
thiserror = "1.0.58"
